# wole

./: AGENTS.md  Cargo.toml  DISK_INSIGHTS_CACHE_PLAN.md  README.md  SECURITY.md  SECURITY_AUDIT.md  VERIFICATION_PROMPT.md  build.rs  install.ps1
.cargo/: config.toml
docs/: update-delete-reliability.md
src/: analyzer.rs  cleaner.rs  cli.rs  config.rs  disk_usage.rs  disk_usage_cache.rs  git.rs  lib.rs  main.rs  optimize.rs  output.rs  progress.rs  project.rs  restore.rs  scan_events.rs  scanner.rs  size.rs  spinner.rs  status.rs  theme.rs  trash_ops.rs  uninstall.rs  utils.rs
src/categories/: app_cache.rs  applications.rs  browser.rs  build.rs  cache.rs  downloads.rs  duplicates.rs  empty.rs  event_logs.rs  large.rs  mod.rs  old.rs  startup.rs  system.rs  temp.rs  trash.rs  windows_update.rs
src/cleaner/: batch_deletion.rs  category_cleaning.rs  path_precheck.rs  single_deletion.rs
src/cli/: interactive_menu.rs
src/cli/commands/: analyze_command.rs  clean_command.rs  config_command.rs  mod.rs  optimize_command.rs  remove_command.rs  restore_command.rs  scan_command.rs  startup_command.rs  status_command.rs  update_command.rs
src/optimize/: admin_check.rs  printing.rs  result.rs  run.rs
src/optimize/operations/: clear_standby_memory.rs  clear_thumbnail_cache.rs  flush_dns_cache.rs  mod.rs  rebuild_icon_cache.rs  reset_network_stack.rs  restart_bluetooth_service.rs  restart_explorer.rs  restart_font_cache_service.rs  restart_windows_search.rs  vacuum_browser_databases.rs
src/scan_cache/: database.rs
src/tui/: events.rs  mod.rs  state.rs
src/tui/screens/: config.rs  confirm.rs  dashboard.rs  disk_insights.rs  mod.rs  optimize.rs  preview.rs  restore.rs  restore_selection.rs  results.rs  scanning.rs  status.rs  success.rs
src/tui/widgets/: logo.rs  progress.rs  shortcuts.rs  table.rs  tree.rs
tests/: integration_tests.rs
