[package]
name = "wole"
version = "0.1.0"
edition = "2021"
authors = ["John Paul Poliquit"]
description = "A developer-focused Windows CLI tool to clean up unused files and free disk space"
repository = "https://github.com/jpaulpoliquit/wole"
license = "MIT"
categories = ["command-line-utilities"]

# Library restored
[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
trash = "5.0"
# git2 = "0.20"  # REMOVED - causes stack overflow on Windows during init
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1.3"
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
colored = "2.1"
toml = "0.8"
lazy_static = "1.5"
rayon = "1.10"
blake3 = "1.5"
ratatui = "0.29"
crossterm = "0.28"
memmap2 = "0.9"
jwalk = "0.8"              # Parallel directory traversal (2-4x faster than walkdir)
globset = "0.4"            # Fast compiled glob patterns
winreg = "0.52"            # Windows registry access for installed applications
rusqlite = { version = "0.31", features = ["bundled"] }  # For SQLite VACUUM operations
ureq = { version = "2.9", features = ["native-tls", "json"] }  # HTTP client for update checks

[dev-dependencies]
tempfile = "3.10"

[profile.test]
# Increase stack size for tests on Windows to prevent stack overflow
# Windows default is ~1MB, this helps with deep directory traversal tests
opt-level = 0  # Faster compilation for tests

[profile.dev]
# Force 8MB stack for Windows to prevent stack overflow during directory traversal
# This is CRITICAL for Windows builds
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
